After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688776 - Don't abort if gnome-initial-setup user doesn't exist
Don't abort if gnome-initial-setup user doesn't exist
Status: RESOLVED FIXED
Product: gnome-initial-setup
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Initial Setup maintainer(s)
GNOME Initial Setup maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-11-21 01:41 UTC by Colin Walters
Modified: 2012-11-21 01:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Don't abort if gnome-initial-setup user doesn't exist (1.45 KB, patch)
2012-11-21 01:41 UTC, Colin Walters
committed Details | Review

Description Colin Walters 2012-11-21 01:41:25 UTC
Some deployments (e.g. gnome-ostree currently) may have the software
installed, but not have run the bit to create a gnome-initial-setup
user.
Comment 1 Colin Walters 2012-11-21 01:41:26 UTC
Created attachment 229534 [details] [review]
Don't abort if gnome-initial-setup user doesn't exist
Comment 2 Jasper St. Pierre (not reading bugmail) 2012-11-21 01:42:21 UTC
Review of attachment 229534 [details] [review]:

Fine with me.
Comment 3 Colin Walters 2012-11-21 01:43:11 UTC
Attachment 229534 [details] pushed as c951dd5 - Don't abort if gnome-initial-setup user doesn't exist