Don't abort if gnome-initial-setup user doesn't exist

Some deployments (e.g. gnome-ostree currently) may have the software
installed, but not have run the bit to create a gnome-initial-setup
user.

https://bugzilla.gnome.org/show_bug.cgi?id=688776